<resources>

    <!-- DO NOT translate -->
    <string name="admob_app_id" translatable="false">ca-app-pub-9043912704472803~9575294075</string>
    <string name="chatgpt3_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=org.bitanon.chatgpt3</string>
    <string name="app_name" translatable="false">ChatGPT3</string>
    <string name="anon" translatable="false">Anon</string>
    <string name="audio_icon_left_auto" translatable="false">🔊</string>
    <string name="audio_icon_left_manual" translatable="false">🔈</string>
    <string name="audio_icon_left_random" translatable="false">🎲</string>
    <string name="html_purchase_words" translatable="false"><a href="lightning:bitanon@getalby.com">bitanon@getalby.com</a></string>
    <string name="purchase_words_default_amount" translatable="false">1000</string>
    <string name="sats" translatable="false">sats</string>

    <!-- DO translate -->
    <!-- Chat Fragment -->
    <string name="alertdialog_terms_agreement_title">Terms and Privacy Agreement</string>
    <string name="exit">Exit</string>
    <string name="accept">Accept</string>
    <string name="label_ai">AI:</string>
    <string name="button_prompt">Prompt</string>
    <string name="enter_prompt">Enter your prompt…</string>
    <string name="elipsis">…</string>
    <string name="response_thinking">Thinking…</string>
    <string name="toast_tts_not_supported">Unfortunately Google Text to Speech doesn\'t support
        your language :(</string>
    <string name="toast_enter_prompt">First, enter a prompt.</string>
    <string name="toast_no_internet">No internet connection. Connect and retry.</string>
    <string name="toast_used_purchased_words">Response used %s purchased words.</string>
    <string name="toast_prompt_truncated">Maximum free prompt length reached:
        \nLogin or Upgrade for longer prompts and responses.</string>
    <string name="append_response_truncated">***Maximum free response length exceeded:
        \nLogin or Upgrade for longer prompts and responses.</string>

    <!-- Exception handling -->
    <string name="exception_socket_timeout">Connection to api.openai.com timed out. The cause is
        likely that OpenAI\'s servers are currently overloaded. When this happens, often they will
        throttle long responses; maybe try a shorter, simpler prompt, while they work on fixing the
        problem. Thanks for your patience and please try again shortly.</string>
    <string name="exception_unauthorized_access">HTTP 401: api.openai.com unauthorized access! Download authorized app:</string>

    <!-- Account Activity -->
    <string name="account">Account</string>
    <string name="login_to_enable_features">Login to increase prompt and response limits and enable
        additional features.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="account_label_name">Name:</string>
    <string name="account_label_prompt_limit">Free prompt words:</string>
    <string name="account_label_response_limit">Free response words:</string>
    <string name="account_label_purchased_words">Purchased words:</string>
    <string name="purchased_words_consumption">Purchased words will only be consumed after free
        prompt/response lengths are exceeded or to block ads.</string>
    <string name="block_ads">Block ads (50 words/ad)</string>
    <string name="login_failed">Login failed:</string>
    <string name="logged_out">Logged out</string>
    <string name="remove_limits">Remove prompt and response limits by logging in and purchasing
        additional word counts, using Bitcoin\'s Lightning Network.</string>

    <!-- Upgrade Activity -->
    <string name="upgrade">Upgrade</string>
    <string name="purchase_additional_words">You can increase prompt and response lengths by
        sending ₿ payments over the Lightning Network (LN):</string>
    <string name="send_ln_payment">Send LN Payment</string>
    <string name="transaction_details">Transaction details</string>
    <string name="purchase_price">Price: 1sat/word</string>
    <string name="purchase_notice">Notice: depending on your wallet, transactions may not yet be
        fully automated and may take a few hours for purchased words to be credited to your account.</string>
    <string name="purchase_words">Purchase words</string>
    <string name="dialog_purchase_words_amount">Amount (sats):</string>
    <string name="cancel">Cancel</string>
    <string name="toast_credit_purchased_words">LN payment received! %s purchased words added</string>
    <string name="toast_purchase_words_verification_error">Error with automated verification of LN payment.
        It may take a few hours for your purchased words to be added to your account.</string>
    <string name="lightning_wallets">Lightning Wallets</string>
    <string name="get_lightning_wallet">If the \'Send LN Payment\' button doesn\'t work, you\'ll
        probably need to install and fund a Lightning wallet on your device:</string>
    <string name="html_lightning_wallet_phoenix"><a href="https://phoenix.acinq.co/">Phoenix (non-custodial app)</a></string>
    <string name="html_getalby"><a href="https://getalby.com/">GetAlby (custodial browser extension)</a></string>
    <string name="manual_transaction_alternative_label">Manual LN Transaction</string>
    <string name="manual_transaction_alternative">Alternatively, you can also purchase words by
        manually sending transactions from another wallet (such as Alby) to the following Lightning address
        and including the comment below.</string>
    <string name="lnurl_address">Lnurl address:</string>
    <string name="lnurl_required_comment">Required comment:</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="dictation">Dictation</string>
    <string name="automatically_dictate_responses">Automatically dictate responses</string>
    <string name="dictation_speed">Speech speed</string>

    <!-- Terms Activity -->
    <string name="terms">Terms</string>
    <string name="app_terms_header">App Terms Agreement</string>
    <string name="openai_terms_header">OpenAI\'s Terms Agreement</string>
    <string name="agree_to_terms">By using this app, you have agreed to the following terms:</string>
    <string name="show_terms_agreement">Show terms agreement at startup</string>
    <string name="html_app_terms_of_use"><a href="https://chatgpt3-android.app/terms-of-use.html">Terms of Use</a></string>
    <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Privacy Policy</a></string>
    <string name="html_openai_terms_of_use"><a href="https://openai.com/terms/">Terms of Use</a></string>
    <string name="html_openai_privacy_policy"><a href="https://openai.com/privacy/">Privacy Policy</a></string>

    <!-- Random prompts -->
    <string name="toast_login_generate_random_prompts">Login to generate random prompts</string>
    <string name="random_prompt_1">How many people died from Covid19?</string>
    <string name="random_prompt_2">How many people die in car accidents globally each year?</string>
    <string name="random_prompt_3">Are mRNA vaccines safe and effective?</string>
    <string name="random_prompt_4">Clearly describe quantum computing</string>
    <string name="random_prompt_5">Are humans causing climate change?</string>
    <string name="random_prompt_6">Will AI enslave humanity?</string>
    <string name="random_prompt_7">Write a short poem about Elon Musk buying Twitter</string>
    <string name="random_prompt_8">Generate tl;dr for the Quran</string>
    <string name="random_prompt_9">What is Bitcoin?</string>
    <string name="random_prompt_10">Is it a good idea to buy Bitcoin?</string>
    <string name="random_prompt_11">Tell me a funny joke</string>
    <string name="random_prompt_12">What is life?</string>
    <string name="random_prompt_13">What is the meaning of life?</string>
    <string name="random_prompt_14">How old is the Earth?</string>
    <string name="random_prompt_15">Do you have feelings?</string>
    <string name="random_prompt_16">Provide an example of irony</string>
    <string name="random_prompt_17">Short emoji story of end of dinosaurs</string>
    <string name="random_prompt_18">List of languages you can translate</string>
    <string name="random_prompt_19">Generate HTML page about cats</string>

</resources>