<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            style="@style/ChatTextLabel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_enable_features"
            style="@style/ChatText"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/logout"
            android:visibility="gone"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_label_name"
                    style="@style/AccountTableLabelText"/>

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anon"
                    style="@style/ChatText"/>

            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_label_prompt_limit"
                    style="@style/AccountTableLabelText"/>

                <TextView
                    android:id="@+id/account_prompt_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChatText"/>

            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_label_response_limit"
                    style="@style/AccountTableLabelText"/>

                <TextView
                    android:id="@+id/account_response_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChatText"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_label_purchased_words"
                    style="@style/AccountTableLabelText"/>

                <TextView
                    android:id="@+id/account_purchased_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChatText"/>

            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"
            style="@style/ChatTextLabel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_limits"
            style="@style/ChatText"/>

        <Button
            android:id="@+id/button_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testing_warning" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
</ScrollView>
