<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_label_name"
                android:text="@string/anon"
                style="@style/ChatTextLabel"/>

            <TextView
                android:id="@+id/textview_question"
                style="@style/ChatTextContent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_response"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_ai"
                    android:layout_width="wrap_content"
                    android:text="@string/label_ai"
                    style="@style/ChatTextLabel"/>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_left_audio_dictation"
                            android:layout_width="30sp"
                            android:layout_height="wrap_content"
                            android:text="@string/audio_icon_left_auto"
                            style="@style/ChatLeftButton"/>

                        <TextView
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            style="@style/ChatTextLabel"/>

                        <Button
                            android:id="@+id/button_left_prompt_random"
                            android:text="@string/audio_icon_left_random"
                            style="@style/ChatLeftButton" />

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/textview_response"
                    android:layout_width="match_parent"
                    style="@style/ChatTextContent" />

            </ScrollView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <Button
            android:id="@+id/button_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_prompt" />

        <EditText
            android:id="@+id/edittext_ask_question"
            style="@style/ChatEditText"
            android:layout_width="match_parent"
            android:autofillHints="@string/enter_prompt"
            android:hint="@string/enter_prompt" />

    </LinearLayout>
</LinearLayout>
